# prompt-synth

./: .gitignore  README.md
.github/workflows/: python-package.yml
audiomanip/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
audiomanip/src/audiomanip/: __init__.py  audiocraft_note_gen.py  midi2audio.py  note_gen.py  nsynth_dataset.py  pitch_shift.py  sampler.py
midi/: MMP_EMP3_Am_115bpm_8bars_Guitar Melodic_Loop_1.mid  MMP_EMP3_Bb_120bpm_8bars_Vocal Melodic_Loop_2.mid  MMP_EMP3_Cm_120bpm_8bars_Piano Melodic_Loop_3.mid  MMP_EMP3_Cm_140bpm_8bars_Piano Melodic_Loop_4.mid  MMP_EMP3_Dm_110bpm_8bars_Synth Melodic_Loop_5.mid  MMP_EMP3_Dm_140bpm_8bars_Synth Melodic_Loop_6.mid  MMP_EMP3_Eb_125bpm_8bars_Synth Melodic_Loop_7.mid  MMP_EMP3_F_90bpm_8bars_Synth Melodic_Loop_8.mid  MMP_EMP3_Gm_100bpm_8bars_Flute Melodic_Loop_9.mid
nbs/: evaluate.ipynb  play_midi.ipynb  train.ipynb
