[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiomanip"
description = "Audio manipulation utilities for prompt synth"
requires-python = ">=3.10"
version = "0.0.1"
authors = [
	{ name="Nadav Tenenbaum", email="tnadav@gmail.com" },
]

dependencies = [
	"numpy",
	"mido",
	"scipy",
	"pyaudio",
	"librosa",
	"librosa",
	"soundfile",
	"audiocraft",
]

[project.optional-dependencies]
types = [
	"types-pyaudio",
 ]

[project.urls]
Homepage = "https://github.com/tnadav/prompt-synth"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "mido",
    "soundfile",
	"scipy",
	"scipy.signal",
	"audiocraft",
	"audiocraft.models",
]
ignore_missing_imports = true

[tool.black]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.src/py_inext/codemod/tests/.*
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
